CAP reading week 1

--- a/SEM2/CAP/exam-notes/notes.tex
+++ b/SEM2/CAP/exam-notes/notes.tex
@@ -221,7 +221,7 @@
         &=\left[\lim_{x\to a}f(x)\right]^n\\
         \lim_{x\to a}c &= c\\
         \lim_{x \to a}x &= a\\
-        \lim_{x \to a}x^n &= a^n &\text{where } n\in\mathbb{Z}^+
+        \lim_{x \to a}x^n &= a^n \text{ where } n\in\mathbb{Z}^+
     \end{align*}
 \end{theorem}
 \begin{theorem}
