--- a/SEM2/CAP/exam-notes/notes.tex
+++ b/SEM2/CAP/exam-notes/notes.tex
@@ -4,8 +4,21 @@
 \usepackage{babel}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\DeclareMathOperator{\sech}{sech}
+\DeclareMathOperator{\csch}{csch}
+\DeclareMathOperator{\arccot}{\text{cot}^{-1}}
+\DeclareMathOperator{\arccsc}{\text{csc}^{-1}}
+\DeclareMathOperator{\arccosh}{\text{cosh}^{-1}}
+\DeclareMathOperator{\arcsinh}{\text{sinh}^{-1}}
+\DeclareMathOperator{\arctanh}{\text{tanh}^{-1}}
+\DeclareMathOperator{\arcsech}{\text{sech}^{-1}}
+\DeclareMathOperator{\arccsch}{\text{csch}^{-1}}
+\DeclareMathOperator{\arccoth}{\text{coth}^{-1}} 
+\DeclareMathOperator{\dom}{dom}
+\DeclareMathOperator{\st}{s.t.}
 \usepackage{amsthm}
 \usepackage{siunitx}
+\usepackage{nicefrac}
 \newtheoremstyle{sltheorem} {}                % Space above
 {}                % Space below
 {\upshape}        % Theorem body font % (default is "\upshape")
@@ -20,6 +33,7 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \begin{document}
+\tableofcontents
 \section{Functions and models}
 \subsection{Four ways to represent a function}
 \begin{definition}
@@ -245,6 +259,7 @@
     \end{align*}
 \end{theorem}
 \begin{theorem}
+    \textbf{The squeeze theorem.}\\
     If $f(x)\leq g(x)\leq h(x)$ when $x$ is near $a$ (except possibly at $a$) and
     \begin{align*}
         \lim_{x\to a}f(x) = \lim_{x\to a}h(x) = L
@@ -253,5 +268,487 @@
     \begin{align*}
         \lim_{x \to a}g(x) = L.
     \end{align*}
+\end{theorem}
+\subsection{The precise definition of a limit}
+\begin{definition}
+    Let $f$ be a function defined on some open interval that contains the number $a$, except possibly at $a$ itself. Then we say that the \textbf{limit of $f(x)$ as $x$ approaches $a$ is $L$}, and we write
+    \begin{align*}
+        \lim_{x\to a}f(x) = L
+    \end{align*}
+    if for every number $\varepsilon>0$ there is a number $\delta>0$ such that
+    \begin{align*}
+        0<|x-a|<\delta \Rightarrow |f(x)-L|<\varepsilon.
+    \end{align*}
+\end{definition}
+\begin{definition}
+    \begin{align*}
+        \lim_{x\to a^-}f(x) = L
+    \end{align*}
+    if for every number $\varepsilon > 0$ there is a number $\delta > 0$ such that
+    \begin{align*}
+        a-\delta < x < a \Rightarrow |f(x)-L| < \varepsilon.
+    \end{align*}
+\end{definition}
+\begin{align*}
+    \lim_{x\to a^+}f(x) = L
+\end{align*}
+    if for every number $\varepsilon > 0$ there is a number $\delta > 0$ such that
+\begin{align*}
+    a < x < a+\delta \Rightarrow |f(x)-L| < \varepsilon.
+\end{align*}
+\begin{definition}
+    Let $f$ be a function defined on some open interval that contains the number $a$, except possibly at $a$ itself. Then
+    \begin{align*}
+        \lim_{x\to a}f(x) = \infty
+    \end{align*}
+    means that for every positive number $M$ there is a positive number $\delta$ such that
+    \begin{align*}
+        0<|x-a|<\delta \Rightarrow f(x)>M.
+    \end{align*}
+\end{definition}
+\begin{definition}
+    Let $f$ be a function defined on some open interval that contains the number $a$, except possibly at $a$ itself. Then
+    \begin{align*}
+        \lim_{x\to a}f(x) = -\infty
+    \end{align*} 
+    means that for every negative number $N$ there is a positive number $\delta$ such that
+    \begin{align*}
+        0<|x-a|<\delta \Rightarrow f(x)<N.
+    \end{align*}
+\end{definition}
+\subsection{Continuity}
+\begin{definition}
+    A function $f$ is \textbf{continuous at a number $a$} if
+    \begin{align*}
+        \lim_{x\to a}f(x)=f(a).
+    \end{align*}
+\end{definition}
+\begin{definition}
+    A function $f$ is \textbf{continuous from the right at a number $a$} if
+    \begin{align*}
+        \lim_{x\to a^+}f(x) = f(a)
+    \end{align*}
+    and $f$ is \textbf{continuous from the left at $a$} if
+    \begin{align*}
+        \lim_{x\to a^-}f(x) = f(a).
+    \end{align*}
+\end{definition}
+\begin{definition}
+    A function $f$ is \textbf{continuous on an interval $I$} if 
+    \begin{align*}
+        \forall a \in I, \lim_{x\to a}f(x) = f(a).
+    \end{align*}
+\end{definition}
+\begin{theorem}
+    If $f$ and $g$ are continuous at $a$ and $c$ is a constant, then the following functions are also continuous at $a$:
+    \begin{enumerate}
+        \item $f+g$
+        \item $f-g$
+        \item $cf$
+        \item $fg$
+        \item $\frac{f}{g}$ if $g(a)\not= 0$
+    \end{enumerate}
+\end{theorem}
+\begin{theorem}
+    \begin{enumerate}
+        \item Any polynomial is continuous everywhere.
+        \item Any rational function is continuous wherever it is defined.
+    \end{enumerate}
+\end{theorem}
+\begin{theorem}
+    The following types of functions are continuous at every number in their domains:
+    \begin{itemize}
+        \item polynomials,
+        \item rational functions,
+        \item root functions,
+        \item trigonometric functions,
+        \item inverse trigonometric functions,
+        \item exponential functions,
+        \item logarithmic functions.
+    \end{itemize}
+\end{theorem}
+\begin{theorem}
+    If $f$ is continuous at $b$ and $\lim_{x\to a}g(x) = b$, then $\lim_{x\to a}f(g(x))=f(b)$. In other words,
+    \begin{align*}
+        \lim_{x\to a}f(g(x))=f\left(\lim_{x\to a}g(x)\right).
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    If $g$ is continuous at $a$ and $f$ is continuous at $g(a)$, then the composite function $f\circ g$ is continuous at $a$.
+\end{theorem}
+\begin{theorem}
+    \textbf{The intermediate value theorem}\\
+    Suppose that $f$ is continuous on the closed interval $[a,b]$ and let $N$ be any number between $f(a)$ and $f(b)$, where $f(a)\not=f(b)$. Then there exists a number $c$ in $(a,b)$ such that $f(c)=N$.
+\end{theorem}
+\subsection{Limits at infinity; horizontal asymptotes}
+\begin{definition}
+    Let $f$ be a function defined on some interval $(a,\infty)$. Then
+    \begin{align*}
+        \lim_{x\to\infty}f(x)=L
+    \end{align*}
+    means that the values of $f(x)$ can be made arbitrarily close to $L$ by taking $x$ sufficiently large.
+\end{definition}
+\begin{definition}
+    Let $f$ be a function defined on some interval $(\infty, a)$. Then
+    \begin{align*}
+        \lim_{x\to -\infty}f(x)=L
+    \end{align*}
+    means that the values of $f(x)$ can be made arbitrarily close to $L$ by taking $x$ sufficiently large negative.
+\end{definition}
+\begin{definition}
+    The line $y=L$ is called a \textbf{horizontal asymptote} of the curve $y=f(x)$ if either
+    \begin{align*}
+        \lim_{x\to \infty}f(x)=L \text{ or } \lim_{x\to-\infty}f(x)=L
+    \end{align*}
+\end{definition}
+\begin{theorem}
+    \begin{align*}
+        \lim_{x\to-\infty}tan^{-1}x=-\frac{\pi}{2}.\\
+        \lim_{x\to\infty}tan^{-1}x=\frac{\pi}{2}.
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    If $r>0$ is a rational number, then
+    \begin{align*}
+        \lim_{x\to\infty}\frac{1}{x^r}=0
+    \end{align*}
+    If $r>0$ is a rational number such that $x^r$ is defined for all $x$, then
+    \begin{align*}
+        \lim_{x\to-\infty}\frac{1}{x^r}=0.
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \begin{align*}
+        \lim_{x\to-\infty}e^x=0.
+    \end{align*}
+\end{theorem}
+\begin{definition}
+    Let $f$ be a function defined on some interval $(a, \infty)$. Then
+    \begin{align*}
+        \lim_{x\to\infty}f(x)=L
+    \end{align*}
+    means that for every $\varepsilon>0$ there is a corresponding number $N$ such that
+    \begin{align*}
+        x>N\Rightarrow|f(x)-L|<\varepsilon.
+    \end{align*}
+\end{definition}
+\begin{definition}
+    Let $f$ be a function defined on some interval $(-\infty, a)$. Then
+    \begin{align*}
+        \lim_{x\to-\infty}f(x)=L
+    \end{align*}
+    means that for every $\varepsilon>0$ there is a corresponding number $N$ such that
+    \begin{align*}
+        x<N\Rightarrow |f(x)-L|<\varepsilon.
+    \end{align*}
+\end{definition}
+\begin{definition}
+    Let $f$ be a function defined on some interval $(a, \infty)$. Then
+    \begin{align*}
+        \lim_{x\to\infty}f(x)=\infty
+    \end{align*}
+    means that for every positive number $M$ there is a corresponding positive number $N$ such that
+    \begin{align*}
+        x>N\Rightarrow f(x)>M.
+    \end{align*}
+\end{definition}
+\subsection{Derivatives and rates of change}
+\begin{definition}
+    The \textbf{tangent line} to the curve $y=f(x)$ at the point $P(a, f(a))$ is the line through $P$ with slope
+    \begin{align*}
+        m=\lim_{x\to a}\frac{f(x)-f(a)}{x-a}
+    \end{align*}
+    provided that this limit exists.
+\end{definition}
+\begin{theorem}
+    \begin{align*}
+        m=\lim_{h\to 0}\frac{f(a + h)-f(a)}{h}
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \begin{align*}
+        v(a)=\lim_{h\to 0}\frac{f(a+h)-f(a)}{h}
+    \end{align*}
+\end{theorem}
+\begin{definition}
+    The \textbf{derivative of a function $f$ at a number $a$}, denoted $f'(a)$, is
+    \begin{align*}
+        f'(a)=\lim_{h\to 0}\frac{f(a+h)-f(a)}{h}
+    \end{align*}
+    if this limit exists.
+\end{definition}
+\begin{theorem}
+    \begin{align*}
+        f'(a)=\lim_{x\to a}\frac{f(x)-f(a)}{x-a}
+    \end{align*}
+\end{theorem}
+\begin{definition}
+    The \textbf{derivative of $f$}, $f'$, is defined by
+    \begin{align*}
+        f'(x)=\lim_{h\to 0}\frac{f(x+h)-f(x)}{h}
+    \end{align*}
+\end{definition}
+\begin{definition}
+    A function $f$ is \textbf{differentiable at $a$} if $f'(a)$ exists. It is \textbf{differentiable on an open interval $(a,b)$} if it is differentiable at every number in the interval.
+\end{definition}
+\begin{theorem}
+    If $f$ is differentiable at $a$, then $f$ is continuous at $a$.
+\end{theorem}
+\section{Differentiation rules}
+\subsection{Derivatives of polynomials and exponential functions}
+\begin{theorem}
+    \begin{align*}
+        \frac{d}{dx}(c) = 0
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \begin{align*}
+        \frac{d}{dx}(x) = 1
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    If $n$ is any real number, then 
+    \begin{align*}
+        \frac{d}{dx}(x^n) = nx^{n-1}.
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    If $c$ is a constant and $f$ is a differentiable function, then
+    \begin{align*}
+        \frac{d}{dx}(cf(x))=c\frac{d}{dx}f(x).
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    If $f$ and $g$ are both differentiable, then
+    \begin{align*}
+        \frac{d}{dx}(f(x)+g(x))=\frac{d}{dx}f(x)+\frac{d}{dx}g(x).
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    If $f$ and $g$ are both differentiable, then
+    \begin{align*}
+        \frac{d}{dx}(f(x)-g(x))=\frac{d}{dx}f(x)-\frac{d}{dx}g(x).
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \begin{align*}
+        \frac{d}{dx}(e^x)=e^x
+    \end{align*}
+\end{theorem}
+\subsection{Product and quotient rules}
+\begin{theorem}
+    If $f$ and $g$ are both differentiable, then
+    \begin{align*}
+        \frac{d}{dx}(f(x)g(x))=f(x)\frac{d}{dx}(g(x))+g(x)\frac{d}{dx}(f(x))
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    If $f$ and $g$ are differentiable, then
+    \begin{align*}
+        \frac{d}{dx}\left(\frac{f(x)}{g(x)}\right)=\frac{g(x)\frac{d}{dx}(f(x))-f(x)\frac{d}{dx}(g(x))}{(g(x))^2}
+    \end{align*}
+\end{theorem}
+\subsection{Derivatives of trigonometric functions}
+\begin{theorem}
+    \begin{align*}
+        \frac{d}{dx}(\sin x)=\cos x
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \begin{align*}
+        \frac{d}{dx}(\cos x)=-\sin x
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \begin{align*}
+        \frac{d}{dx}(\tan x)=\frac{1}{\cos^2 x}
+    \end{align*}
+\end{theorem}
+\subsection{The chain rule}
+\begin{theorem}
+    If $g$ is differentiable at $x$ and $f$ is differentiable at $g(x)$, then the composite function $F=f\circ g$ is differentiable at $x$ and $F'$ is given by the product
+    \begin{align*}
+        F'(x)=f'(g(x))\cdot g'(x).
+    \end{align*}
+    In Leibniz notation, if $y=f(u)$ and $u=g(x)$ are both differentiable functions, then
+    \begin{align*}
+        \frac{dy}{dx}=\frac{dy}{du}\frac{du}{dx}
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \begin{align*}
+        \frac{d}{dx}(a^x)=a^x\ln a
+    \end{align*}
+\end{theorem}
+\subsection{Implicit differentiation}
+\begin{theorem}
+    \textbf{Derivatives of inverse trigonometric functions}\\
+    \begin{align*}
+        \frac{d}{dx}(\sin^{-1}x)&=\frac{1}{\sqrt{1-x^2}}\\
+        \frac{d}{dx}(\cos^{-1}x)&=-\frac{1}{\sqrt{1-x^2}}\\
+        \frac{d}{dx}(\tan^{-1}x)&=\frac{1}{1+x^2}
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    The only solutions to the differential equation $\nicefrac{dy}{dt}=ky$ are the exponential functions
+    \begin{align*}
+        y(t)=y(0)e^{kt}.
+    \end{align*}
+\end{theorem}
+\setcounter{subsection}{9}
+\subsection{Linear approximations and differentials}
+\begin{theorem}
+    \begin{align*}
+        f(x)\approx f(a)+f'(a)(x-a)
+    \end{align*}
+    is called the \textbf{linear approximation} or \textbf{tangent line approximation} of $f$ at $a$.
+\end{theorem}
+\subsection{Hyperbolic functions}
+\begin{definition}
+    \begin{align*}
+        \sinh x &:= \frac{e^x-e^{-x}}{2}\\
+        \cosh x &:= \frac{e^x+e^{-x}}{2}\\
+        \tanh x &:= \frac{\sinh x}{\cosh x}
+    \end{align*}
+\end{definition}
+\begin{theorem}
+    \textbf{Hyperbolic identities}
+    \begin{align*}
+        \sinh(-x) &= -\sinh x\\
+        \cosh(-x) &= \cosh x\\
+        \cosh^2x - \sinh^2x &= 1\\
+        1-\tanh^2 x &= \nicefrac{1}{\cosh^2x}\\
+        \sinh(x+y) &=\sinh x \cosh x + \cosh x \sinh y\\
+        \cosh(x+y) &= \cosh x \cosh y + \sinh x \sinh y 
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \textbf{Derivatives of hyperbolic functions and their inverses}
+    \begin{align*}
+        \begin{aligned}
+            \frac{d}{dx}(\sinh x)&=\cosh x\\
+            \frac{d}{dx}(\csch x)&=-\csch x \coth x\\
+            \frac{d}{dx}(\cosh x)&=\sinh x\\
+            \frac{d}{dx}(\sech x)&= -\tanh x \sech x\\
+            \frac{d}{dx}(\tanh x)&=\sech^2 x\\
+            \frac{d}{dx}(\coth x)&= -\csch^2 x
+        \end{aligned}
+        \hspace{1cm}
+        \begin{aligned}
+            \frac{d}{dx}(\arcsinh x)&=\frac{1}{\sqrt{1+x^2}}\\
+            \frac{d}{dx}(\arccsch x)&=-\frac{1}{|x|\sqrt{x^2+1}}\\
+            \frac{d}{dx}(\arccosh x)&=\frac{1}{\sqrt{x^2-1}}\\
+            \frac{d}{dx}(\arcsech x)&= -\frac{1}{x\sqrt{1-x^2}}\\
+            \frac{d}{dx}(\arctanh x)&=\frac{1}{1-x^2}\\
+            \frac{d}{dx}(\arccoth x)&= \frac{1}{1-x^2}
+        \end{aligned}
+    \end{align*}
+\end{theorem}
+\section{Applications of Differentiation}
+\subsection{Maximum and minimum values}
+\begin{definition}
+    A function $f$ has an \textbf{absolute maximum} (or \textbf{global maximum}) at $c$ if
+    \begin{align*}
+        \forall x\in \dom f, f(x)\geq f(x).
+    \end{align*} 
+    Similarly, $f$ has an \textbf{absolute minimum} at $c$ if
+    \begin{align*}
+        \forall x\in \dom f, f(x)\leq f(x).
+    \end{align*}
+\end{definition}
+\begin{definition}
+    A function $f$ has a \textbf{local maximum} at $c$ if
+    \begin{align*}
+        \exists a,b\in \dom f \st \forall x\in (a,b), f(c)\geq f(x). 
+    \end{align*}
+    Similarly, $f$ has a \textbf{local minimum} at $c$ if
+    \begin{align*}
+        \exists a,b\in \dom f\st \forall x\in(a,b), f(c)\geq f(x).
+    \end{align*}
+\end{definition}
+\begin{theorem}
+    \textbf{The extreme value theorem}\\
+    If $f$ is continuous on a close interval $[a,b]$, then $f$ attains an absolute maximum value $f(c)$ and an absolute minimum value $f(d)$ at some numbers $c,d\in[a,b]$.
+\end{theorem}
+\begin{theorem}
+    \textbf{Fermat's theorem}\\
+    If $f$ has a local maximum or minimum at $c$, and if $f'(c)$ exists, then $f'(c)=0$.
+\end{theorem}
+\begin{definition}
+    A \textbf{critical number} of a function $f$ is a number $c$ in the domain of $f$ such that either $f'(c)=0$ or $f'(c)$ does not exists.
+\end{definition}
+\subsection{The mean value theorem}
+\begin{theorem}
+    \textbf{Rolle's theorem}\\
+    Let $f$ be a function that satisfies the following three hypotheses:
+    \begin{enumerate}
+        \item $f$ is continuous on the closed interval $[a,b]$.
+        \item $f$ is differentiable on the open interval $(a,b)$.
+        \item $f(a)=f(b)$.
+    \end{enumerate}
+    Then there is a number $c \in (a,b)$ such that $f'(c)=0$.
+\end{theorem}
+\begin{theorem}
+    \textbf{The mean value theorem}\\
+    Let $f$ be a function that satisfies the following hypotheses:
+    \begin{enumerate}
+        \item $f$ is continuous on the closed interval $[a,b]$.
+        \item $f$ is differentiable on the open interval $(a,b)$.
+    \end{enumerate}
+    Then there is a number $c\in(a,b)$ such that
+    \begin{align*}
+        f'(c)=\frac{f(b)-f(a)}{b-a}
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \begin{align*}
+        \text{If }
+        \forall x\in(a,b), f'(x)=0, 
+        \text{ then } 
+        \exists y\in\R\st\forall c\in(a,b), f(c)=y.
+    \end{align*}
+\end{theorem}
+\begin{theorem}
+    \begin{align*}
+        \text{If }\forall x\in(a,b), f'(x)=g'(x)\text{, then } \exists c\in\R \st\forall x\in (a,b), f(x)=g(x)+c.
+    \end{align*}
+\end{theorem}
+\subsection{How derivatives affect the shape of a graph}
+\begin{definition}
+    If the graph of $f$ lies above all of its tangents on an interval $I$, then it is called \textbf{concave upward} on $I$. If the graph of $f$ lies below all of its tangents, then it is called \textbf{concave downward} on $I$.
+\end{definition}
+\begin{theorem}
+    \textbf{Concavity test}
+    \begin{enumerate}
+        \item If $\forall x\in I, f''(x)>0$, then the graph of $f$ is concave upward on $I$.
+        \item If $\forall x\in I, f''(x)<0$, then the graph of $f$ is concave downward on $I$.
+    \end{enumerate}
+\end{theorem}
+\begin{definition}
+    A point $P$ on a curve $y=f(x)$ is called an \textbf{inflection point} if $f$ is continuous there and the curve changes its concavity.
+\end{definition}
+\begin{theorem}
+    Suppose $f''$ is continuous near $c$.
+    \begin{enumerate}
+        \item If $f'(c)=0$ and $f''(c)>0$, then $f$ has a local minimum at $c$.
+        \item If $f'(c)=0$ and $f''(c)<0$, then $f$ has a local maximum at $c$.
+    \end{enumerate}
+\end{theorem}
+\subsection{Indeterminate forms and l'Hospital's rule}
+\begin{theorem}
+    \textbf{L'Hosptial's rule}\\
+    Suppose $f$ and $g$ are differentiable and $g'(x)\not=0$ on an open interval $I$ that contains $a$ (except possibly at $a$). Suppose that
+    \begin{align*}
+        \lim_{x\to a}f(x)=0\text{ and } \lim_{x\to a}g(x)=0
+    \end{align*}
+    or that
+    \begin{align*}
+        \lim_{x\to a}f(x)=\pm\infty \text{ and } \lim_{x\to a}g(x) = \pm\infty.
+    \end{align*}
+    Then
+    \begin{align*}
+        \lim_{x\to a}\frac{f(x)}{g(x)}=\lim_{x\to a}\frac{f'(x)}{g'(x)}
+    \end{align*}
+    if the limit on the right side exists (or is $\pm\infty$).
 \end{theorem}
 \end{document}
